--- a/lighter.html
+++ b/lighter.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Beth O'Loughlin</title>
 </head>
-<body style="text-align: center;">
-    <img src="images/lighter.jpg" alt="">
+<body>
+    <h1>Lighter</h1>
 </body>
 </html>
