Add lighter/darker jpgs

--- a/darker.html
+++ b/darker.html
@@ -5,6 +5,6 @@
     <title>Beth O'Loughlin</title>
 </head>
 <body>
-    <img src="images/lighter.jpg" alt="">
+    <img src="images/darker.jpg" alt="">
 </body>
 </html>
