--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="wrapper">
 
         <header class="header">
-            <h1>Beth O'Loughlinnnnm</h1>
+            <h1>Beth O'Loughlin</h1>
         </header>
 
     </div>
