hide site for live domain temoprarily; add no-index

--- a/index.html
+++ b/index.html
@@ -2,16 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Beth O'Loughlin Celebrant</title>
+    <meta name="robots" content="noindex">
+    <title>Beth O'Loughlin Marriage Celebrant</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:700" rel="stylesheet">
     <link rel="stylesheet" href="css/default.css">
 </head>
+
 <body>
-    <div class="wrapper">
+
+    <div class="wrapper" style="display: none;">
 
         <header class="header">
-            <h1>Beth O'Loughlin</h1>
+            <div class="content-outer">
+                <h1>Beth O'Loughlin
+                    <span>Marriage Celebrant</span>
+                </h1>
+            </div>
+            <div class="header-secondary">
+                <div class="content-restrict">
+                    <h3>Auckland Marriage Celebrant</h3>
+                    <p class="tel"><a href="tel:+61402928814">027 261 2695</a></p>
+                </div>
+            </div>
         </header>
 
+
+        <section class="intro content-inner">
+
+            <!-- <h1>Welcome</h1> -->
+
+            <p class="larger">My name is Beth O’Loughlin and I would love to be involved with your special day be it a marriage or civil union.</p>
+            <p>I look forward to hearing your story and then assisting in crafting a special service especially for you.  I have an event management background which can assist in ensuring your day goes smoothly.  If required, I can help you with any aspect of your planning.</p>
+            <p>I am based in Parnell, Auckland and am available for services in Auckland City and environs.</p>
+            <p>Please email me and I will respond with availability and cost.  I would love to meet with you and have some fun planning your special day!</p>
+
+            <h1>About Me</h1>
+
+            <p>Being appointed a marriage celebrant has fulfilled a life-long dream for me.</p>
+            <p>I moved to Auckland 15 years ago and fell in love with Parnell where I still live and am heavily involved in the community.</p>
+            <p>I work as an office manager for a busy professional practice in Newmarket.  I hail from the South Island where I had my own events management business so know all about organising events!</p>
+            <p>I am from a large (and yes we were Catholic) family, am a mother of two adult children so appreciate the value of families and know all about family dynamics.</p>
+            <p>Being raised a Catholic, I know all about pomp and ceremony!</p>
+            <p>I have excellent written and verbal skills and hold a Certificate in Freelance Journalism from the New Zealand Institute of Business Studies.</p>
+            <p>I am presently in the process of completing my Certificate in Celebrant Studies at The Celebrant School.  This training ensures you are in good hands.</p>
+            <p>My hobbies are keeping fit (I’m a gym junkie), reading, current affairs (and a newspaper junkie!) and politics.</p>
+
+        </section>
+
     </div>
+
 </body>
+
 </html>
