--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 
 <body>
 
-    <div class="wrapper" style="display: none;">
+    <div class="wrapper" id="top">
 
         <header class="header">
             <div class="content-outer">
-                <h1>Beth O'Loughlin
-                    <span>Marriage Celebrant</span>
-                </h1>
+                <h1>Beth O'Loughlin Marriage Celebrant</h1>
+                <!-- <img src="images/beth-oloughlin-auckland-marriage-celebrant.svg" alt=""> -->
             </div>
             <div class="header-secondary">
                 <div class="content-restrict">
@@ -24,24 +23,36 @@
                     <p class="tel"><a href="tel:+61402928814">027 261 2695</a></p>
                 </div>
             </div>
+            <nav class="nav">
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
+                </ul>
+            </nav>
+
         </header>
 
+        <!-- INTRO -->
 
         <section class="intro content-inner">
 
-            <!-- <h1>Welcome</h1> -->
-
-            <p class="larger">My name is Beth O’Loughlin and I would love to be involved with your special day be it a marriage or civil union.</p>
-            <p>I look forward to hearing your story and then assisting in crafting a special service especially for you.  I have an event management background which can assist in ensuring your day goes smoothly.  If required, I can help you with any aspect of your planning.</p>
-            <p>I am based in Parnell, Auckland and am available for services in Auckland City and environs.</p>
+            <p class="larger">My name is <strong>Beth O’Loughlin</strong> and I would love to be involved with your special day be it a marriage or civil union.</p>
+            <img class="profile_pic bordered" src="images/auckland-marriage-celebrant.jpg" alt="Beth O'Loughlin - Auckland Marriage Celebrant">
+            <p><span class="drop-cap"><span class="drop-cap__inner">I</span></span> look forward to hearing your story and then assisting in crafting a special service especially for you.  I have an event management background which can assist in ensuring your day goes smoothly.  If required, I can help you with any aspect of your planning.</p>
+            <p>I am based in <strong>Parnell, Auckland</strong> and am available for services in Auckland City and environs.</p>
             <p>Please email me and I will respond with availability and cost.  I would love to meet with you and have some fun planning your special day!</p>
 
-            <h1>About Me</h1>
+            <h1 id="about">About Me</h1>
+
+            <img class="reading-img bordered" src="images/beth-oloughlin-celebrant-reading.jpg" alt="">
 
             <p>Being appointed a marriage celebrant has fulfilled a life-long dream for me.</p>
             <p>I moved to Auckland 15 years ago and fell in love with Parnell where I still live and am heavily involved in the community.</p>
             <p>I work as an office manager for a busy professional practice in Newmarket.  I hail from the South Island where I had my own events management business so know all about organising events!</p>
+
             <p>I am from a large (and yes we were Catholic) family, am a mother of two adult children so appreciate the value of families and know all about family dynamics.</p>
+
             <p>Being raised a Catholic, I know all about pomp and ceremony!</p>
             <p>I have excellent written and verbal skills and hold a Certificate in Freelance Journalism from the New Zealand Institute of Business Studies.</p>
             <p>I am presently in the process of completing my Certificate in Celebrant Studies at The Celebrant School.  This training ensures you are in good hands.</p>
@@ -49,7 +60,114 @@
 
         </section>
 
+
+        <!-- SERVICES -->
+
+        <section class="services colored-bg">
+            <div class="content-inner">
+                <h1 id="services">Services</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam odio sit ullam, quo deserunt consequuntur dignissimos aut explicabo, laudantium, vel nihil labore cumque voluptatibus laboriosam obcaecati, ab ea! Amet, velit!</p>
+                <ul>
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                    <li>item 4</li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam odio sit ullam, quo deserunt consequuntur dignissimos aut explicabo, laudantium, vel nihil labore cumque voluptatibus laboriosam obcaecati, ab ea! Amet, velit!</p>
+
+            </div>
+        </section>
+
+
+        <!-- CONTACT -->
+
+        <section class="contact">
+            <div class="content-inner">
+                <h1 id="contact">Contact</h1>
+
+                <form action="" id="contact-form">
+                    <div class="form_row">
+                        <label for="">Name</label>
+                        <input type="text" required>
+                    </div>
+                    <div class="form_row">
+                        <label for="">Email</label>
+                        <input type="email" required>
+                    </div>
+                    <div class="form_row">
+                        <label for="">Telephone</label>
+                        <input type="telephone">
+                    </div>
+                    <div class="form_row">
+                        <label for="">Message</label>
+                        <textarea name="name" rows="8" cols="80" required></textarea>
+                    </div>
+                </form>
+
+                 <p><a href="#top">Top</a></p>
+
+            </div>
+        </section>
+
+        <footer class="footer">
+            <p><small> 2017 Beth O'Loughlin Marriage Celebrant</small></p>
+        </footer>
+
+        <img src="images/couple_b&w.jpg" alt="">
+
     </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+<script>
+
+// Smooth Scorlling
+
+// Select all links with hashes
+$('a[href*="#"]')
+  // Remove links that don't actually link to anything
+  .not('[href="#"]')
+  .not('[href="#0"]')
+  .click(function(event) {
+    // On-page links
+    if (
+      location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '')
+      &&
+      location.hostname == this.hostname
+    ) {
+      // Figure out element to scroll to
+      var target = $(this.hash);
+      target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+      // Does a scroll target exist?
+      if (target.length) {
+        // Only prevent default if animation is actually gonna happen
+        event.preventDefault();
+        $('html, body').animate({
+          scrollTop: target.offset().top - 190
+        }, 1000, function() {
+          // Callback after animation
+          // Must change focus!
+          var $target = $(target);
+          $target.focus();
+          if ($target.is(":focus")) { // Checking if the target was focused
+            return false;
+          } else {
+            $target.attr('tabindex','-1'); // Adding tabindex for elements not focusable
+            $target.focus(); // Set focus again
+          };
+        });
+      }
+    }
+  });
+
+  // Input Focus border
+
+  $("input").on("focus", function(){
+        console.log('gg');
+        $(".form_row").removeClass("focussed");
+        $(this).parent().toggleClass("focussed");
+  });
+
+</script>
 
 </body>
 
