--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="robots" content="noindex">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beth O'Loughlin Marriage Celebrant</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:700" rel="stylesheet">
     <link rel="stylesheet" href="css/default.css">
@@ -13,24 +14,25 @@
     <div class="wrapper" id="top">
 
         <header class="header">
-            <div class="content-outer">
-                <h1>Beth O'Loughlin Marriage Celebrant</h1>
-                <!-- <img src="images/beth-oloughlin-auckland-marriage-celebrant.svg" alt=""> -->
+            <div class="header-top">
+                <div class="content-outer">
+                    <h1>Beth O'Loughlin Auckland Marriage Celebrant</h1>
+                    <!-- <img src="images/beth-oloughlin-auckland-marriage-celebrant.svg" alt=""> -->
+                </div>
             </div>
             <div class="header-secondary">
                 <div class="content-restrict">
-                    <h3>Auckland Marriage Celebrant</h3>
-                    <p class="tel"><a href="tel:+61402928814">027 261 2695</a></p>
+                    <h3><span>Auckland</span> Marriage Celebrant</h3>
+                    <p class="tel"><a href="tel:+64272612695">027 261 2695</a></p>
                 </div>
             </div>
             <nav class="nav">
                 <ul>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#whatnext">What Next?</a></li>
                     <li><a href="#contact">Contact Me</a></li>
                 </ul>
             </nav>
-
         </header>
 
         <!-- INTRO -->
@@ -42,6 +44,8 @@
             <p><span class="drop-cap"><span class="drop-cap__inner">I</span></span> look forward to hearing your story and then assisting in crafting a special service especially for you.  I have an event management background which can assist in ensuring your day goes smoothly.  If required, I can help you with any aspect of your planning.</p>
             <p>I am based in <strong>Parnell, Auckland</strong> and am available for services in Auckland City and environs.</p>
             <p>Please email me and I will respond with availability and cost.  I would love to meet with you and have some fun planning your special day!</p>
+
+            <hr>
 
             <h1 id="about">About Me</h1>
 
@@ -60,30 +64,48 @@
 
         </section>
 
+        <hr>
+
 
         <!-- SERVICES -->
 
-        <section class="services colored-bg">
+        <section class="services">
             <div class="content-inner">
-                <h1 id="services">Services</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam odio sit ullam, quo deserunt consequuntur dignissimos aut explicabo, laudantium, vel nihil labore cumque voluptatibus laboriosam obcaecati, ab ea! Amet, velit!</p>
-                <ul>
-                    <li>item 1</li>
-                    <li>item 2</li>
-                    <li>item 3</li>
-                    <li>item 4</li>
-                </ul>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam odio sit ullam, quo deserunt consequuntur dignissimos aut explicabo, laudantium, vel nihil labore cumque voluptatibus laboriosam obcaecati, ab ea! Amet, velit!</p>
+                <h1 id="whatnext">What Next?</h1>
 
+                <!-- <h2>Getting Started</h2> -->
+                <ul>
+                    <li>Let's meet and you can check me out - my place or a local cafe at a time to suit</li>
+                    <li>This will help you decide if you are happy to proceed with me officiating on your big day</li>
+                    <li>We will discuss the time, date and proposed structure of your ceremony</li>
+                    <li>I will advise you of the legal requirements and ensure paperwork requirements are covered</li>
+                    <li>I will give you options for vows and ceremony structure and format</li>
+                    <li>We will discuss fees</li>
+                </ul>
+                
+                <h2>Then...</h2>
+                <ul>
+                    <li>Once you've given me the green light, I will write a unique ceremony incorporating your love story</li>
+                    <li>I will provide you with a copy of the script in draft form and then tweak as required</li>
+                    <li>On the day I will arrive half an hour before the ceremony and check everything is in order</li>
+                    <li>And then enjoy your big day!</li>
+                </ul>
+
+                <h2>Fees</h2>
+                <ul>
+                    <li>Provided on application - my fees are moderate.</li>
+                </ul>
             </div>
         </section>
 
 
         <!-- CONTACT -->
 
-        <section class="contact">
+        <section class="contact colored-bg">
             <div class="content-inner">
                 <h1 id="contact">Contact</h1>
+
+                <p>If you would like to make a booking or need further information, feel free to phone me on <a href="tel:+64272612695">027 261 2695</a> or, if you prefer email please use the form below.</p>
 
                 <form action="" id="contact-form">
                     <div class="form_row">
@@ -100,20 +122,27 @@
                     </div>
                     <div class="form_row">
                         <label for="">Message</label>
-                        <textarea name="name" rows="8" cols="80" required></textarea>
+                        <textarea name="name" required placeholder="Tell me a bit about yourselves, and what you are planning for your big day..."></textarea>
                     </div>
+                    <div class="form_row">
+                        <button class="btn" type="submit">Send</button>
+                    </div>
+
                 </form>
 
-                 <p><a href="#top">Top</a></p>
+                 <p class="back-to-top"><a href="#top">&#8593; Top</a></p>
 
             </div>
         </section>
 
+        <!-- <img src="images/couple_b&w.jpg" alt="Wedding Bride and Groom"> -->
+        <div class="hero-bottom"></div>
+
         <footer class="footer">
-            <p><small> 2017 Beth O'Loughlin Marriage Celebrant</small></p>
+            <p><small> &copy; Beth O'Loughlin Marriage Celebrant 2017</small></p>
         </footer>
 
-        <img src="images/couple_b&w.jpg" alt="">
+        <!-- <img src="images/couple_b&w.jpg" alt="Wedding Bride and Groom"> -->
 
     </div>
 
@@ -142,8 +171,8 @@ $('a[href*="#"]')
         // Only prevent default if animation is actually gonna happen
         event.preventDefault();
         $('html, body').animate({
-          scrollTop: target.offset().top - 190
-        }, 1000, function() {
+          scrollTop: target.offset().top - 230
+        }, 800, function() {
           // Callback after animation
           // Must change focus!
           var $target = $(target);
