Add form redirect page; general CSS tweaks

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <section class="services">
             <div class="content-inner">
-                <h1 id="whatnext">Get Started</h1>
+                <h1 id="whatnext">Getting Started</h1>
 
                 <!-- <h2>Getting Started</h2> -->
                 <ul>
@@ -128,11 +128,14 @@
                     </div>
                     <!-- Special fields -->
                     <input type="hidden" name="*honeypot" />
-                    <input type="hidden" name="*subject" value="Marriage Celebrant enquiry" />
+                    <input type="hidden" name="*subject" value="Marriage celebrant enquiry" />
+                    <input type="hidden" name="*redirect" value="https://jaredol.github.io/aucklandcelebrant/index.html" />
 
                     <div class="form_row">
                         <button class="btn" type="submit">Send</button>
                     </div>
+
+                    <div id="msg-success">Your message was sent</div>
 
                 </form>
 
@@ -144,7 +147,7 @@
         <div class="hero-bottom"></div>
 
         <footer class="footer">
-            <p><small> &copy; Beth O'Loughlin Marriage Celebrant 2017</small></p>
+            <p><small> &copy; Beth O'Loughlin Marriage Celebrant 2017 | mob: <a href="tel:+64272612695">027 261 2695</a> </small></p>
         </footer>
 
     </div>
