--- a/thank-you.html
+++ b/thank-you.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Beth O'Loughlin | Auckland Marriage Celebrant</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:700" rel="stylesheet">
+    <link rel="stylesheet" href="css/default.css">
 </head>
+
 <body>
-    <h1>Thanks!</h1>
-    <div><img src="images/lighter.jpg" alt=""></div>
+
+    <div class="wrapper" id="top">
+
+        <header class="header">
+            <div class="header-top">
+                <div class="content-outer">
+                    <h1><a href="/">Beth O'Loughlin Auckland Marriage Celebrant</a></h1>
+                    <!-- <img src="images/beth-oloughlin-auckland-marriage-celebrant.svg" alt=""> -->
+                </div>
+            </div>
+            <div class="header-secondary">
+                <div class="content-restrict">
+                    <h3><span>Auckland</span> Marriage Celebrant</h3>
+                    <p class="tel"><a href="tel:+64272612695">027 261 2695</a></p>
+                </div>
+            </div>
+
+        </header>
+
+        <!-- INTRO -->
+
+        <section class="thank-you-content content-inner">
+
+            <p class="larger">Thanks, your message has been sent!</p>
+            <p class="larger">I will be in touch very soon...</p>
+            <p class="larger">Regards, Beth</p>
+            <p class="block-center"><a href="/">< Back to homepage</a></p>
+
+
+        </section>
+
+
+        <div class="hero-bottom"></div>
+
+        <footer class="footer">
+            <p><small> &copy; Beth O'Loughlin Marriage Celebrant 2017</small></p>
+        </footer>
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+    <script src="js/scripts.js"></script>
+
 </body>
+
 </html>
