change from redirect URL (again)

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                     </div>
                     <!-- Special fields -->
                     <input type="hidden" name="*honeypot" />
-                    <input type="hidden" name="*subject" value="Marriage celebrant enquiry" />
-                    <input type="hidden" name="*redirect" value="https://jaredol.github.io/aucklandcelebrant/index.html" />
+                    <input type="hidden" name="*subject" value="Marriage Celebrant Enquiry" />
+                    <input type="hidden" name="*redirect" value="https://jaredol.github.io/aucklandcelebrant/thank-you.html" />
 
                     <div class="form_row">
                         <button class="btn" type="submit">Send</button>
