Various css fixes for mobile

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </div>
             <nav class="nav">
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#whatnext">Getting Started</a></li>
-                    <li><a href="#contact">Contact Me</a></li>
+                    <li><a id="nav-about" href="#about">About</a></li>
+                    <li><a id="nav-gs" href="#gettingstarted">Getting Started</a></li>
+                    <li><a id="nav-contact" href="#contact">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
@@ -40,7 +40,7 @@
 
         <section class="intro content-inner">
 
-            <p class="larger">My name is <strong>Beth O’Loughlin</strong> and I would love to be involved with your special day be it a marriage or civil union.</p>
+            <p class="font-largest">My name is <strong>Beth O’Loughlin</strong> and I would love to be involved with your special day be it a marriage or civil union.</p>
             <img class="profile_pic bordered" src="images/auckland-marriage-celebrant.jpg" alt="Beth O'Loughlin - Auckland Marriage Celebrant">
             <p><span class="drop-cap"><span class="drop-cap__inner">I</span></span> look forward to hearing your story and then assisting in crafting a special service especially for you.  I have an event management background which can assist in ensuring your day goes smoothly.  If required, I can help you with any aspect of your planning.</p>
             <p>I am based in <strong>Parnell, Auckland</strong> and am available as your celebrant for services in Auckland City and environs.</p>
@@ -50,7 +50,7 @@
 
             <h1 id="about">About Me</h1>
 
-            <img class="reading-img bordered" src="images/beth-oloughlin-celebrant-reading.jpg" alt="">
+            <img class="reading-img bordered" src="images/beth-oloughlin-celebrant-reading.jpg" alt="Beth reading at a wedding">
 
             <p>Being appointed a marriage celebrant has fulfilled a life-long dream for me.</p>
             <p>I moved to Auckland 15 years ago and fell in love with Parnell where I still live and am heavily involved in the community.</p>
@@ -72,9 +72,8 @@
 
         <section class="services">
             <div class="content-inner">
-                <h1 id="whatnext">Getting Started</h1>
+                <h1 id="gettingstarted">Getting Started</h1>
 
-                <!-- <h2>Getting Started</h2> -->
                 <ul>
                     <li>Let's meet and you can check me out - my place or a local cafe at a time to suit</li>
                     <li>This will help you decide if you are happy to proceed with me officiating on your big day</li>
@@ -104,7 +103,7 @@
 
         <section class="contact colored-bg">
             <div class="content-inner">
-                <h1 id="contact">Contact</h1>
+                <h1  id="contact">Contact</h1>
 
                 <p>If you would like to make a booking or need further information, feel free to phone me on <a href="tel:+64272612695">027 261 2695</a> or, if you prefer email please use the form below.</p>
 
