--- a/thank-you.html
+++ b/thank-you.html
@@ -35,9 +35,9 @@
 
         <section class="thank-you-content content-inner">
 
-            <p class="larger">Thanks, your message has been sent!</p>
-            <p class="larger">I will be in touch very soon...</p>
-            <p class="larger">Regards, Beth</p>
+            <p class="font-largest">Thanks, your message has been sent!</p>
+            <p class="font-larger">I will be in touch very soon...</p>
+            <p class="font-larger">Regards, Beth</p>
             <p class="block-center"><a href="/">< Back to homepage</a></p>
 
 
