update redirect URL

--- a/thank-you.html
+++ b/thank-you.html
@@ -38,7 +38,7 @@
             <p class="font-largest">Thanks, your message has been sent!</p>
             <p class="font-larger">I will be in touch very soon...</p>
             <p class="font-larger">Regards, Beth</p>
-            <p class="block-center"><a href="/">< Back to homepage</a></p>
+            <p class="block-center"><a href="index.html">< Back to homepage</a></p>
 
 
         </section>
