Add meta tag, fix invalid html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
     <title>Beth O'Loughlin | Auckland Marriage Celebrant</title>
+    
+    <meta name="description" content="Beth O'Loughlin is a marriage celebrant in Auckland, New Zealand. Beth is based in Parnell and is available as you celebrant for services in Auckland City and environs">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:700" rel="stylesheet">
     <link rel="stylesheet" href="css/default.css">
@@ -18,7 +21,6 @@
             <div class="header-top">
                 <div class="content-outer">
                     <h1>Beth O'Loughlin Auckland Marriage Celebrant</h1>
-                    <!-- <img src="images/beth-oloughlin-auckland-marriage-celebrant.svg" alt=""> -->
                 </div>
             </div>
             <div class="header-secondary">
@@ -67,7 +69,6 @@
 
         <hr>
 
-
         <!-- SERVICES -->
 
         <section class="services">
@@ -107,7 +108,6 @@
 
                 <p>If you would like to make a booking or need further information, feel free to phone me on <a href="tel:+64272612695">027 261 2695</a> or, if you prefer email please use the form below.</p>
 
-                <!-- <form action="" id="contact-form"> -->
                 <form action="https://www.enformed.io/di2izfvc" method="POST" id="contact-form">
                     <div class="form_row">
                         <label for="Name">Name<span class="required">*</span></label>
@@ -119,7 +119,7 @@
                     </div>
                     <div class="form_row">
                         <label for="Telephone">Telephone</label>
-                        <input type="telephone" id="Telephone" name="Telephone">
+                        <input type="tel" id="Telephone" name="Telephone">
                     </div>
                     <div class="form_row">
                         <label for="Message">Message<span class="required">*</span></label>
