--- a/thank-you.html
+++ b/thank-you.html
@@ -3,9 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <title>Beth O'Loughlin | Auckland Marriage Celebrant</title>
+
+    <meta name="description" content="Beth O'Loughlin is a marriage celebrant in Auckland, New Zealand. Beth is based in Parnell and is available as you celebrant for services in Auckland City and environs">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:700" rel="stylesheet">
     <link rel="stylesheet" href="css/default.css">
@@ -19,7 +22,6 @@
             <div class="header-top">
                 <div class="content-outer">
                     <h1><a href="/">Beth O'Loughlin Auckland Marriage Celebrant</a></h1>
-                    <!-- <img src="images/beth-oloughlin-auckland-marriage-celebrant.svg" alt=""> -->
                 </div>
             </div>
             <div class="header-secondary">
