--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-<script src="js/scripts.js"></script>
+<script src="js-min/scripts.js"></script>
 
 </body>
 
