update form email; switch to jquery-min

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                     <!-- Special fields -->
                     <input type="hidden" name="*honeypot" />
                     <input type="hidden" name="*subject" value="Marriage Celebrant Enquiry" />
+                    <input type="hidden" name="*default_email" value="beth.o@xtra.co.nz" />
                     <input type="hidden" name="*redirect" value="https://jaredol.github.io/aucklandcelebrant/thank-you.html" />
 
                     <div class="form_row">
@@ -151,7 +152,7 @@
 
     </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js-min/scripts.js"></script>
 
 </body>
