--- a/thank-you.html
+++ b/thank-you.html
@@ -42,7 +42,6 @@
             <p class="font-larger">Regards, Beth</p>
             <p class="block-center"><a href="index.html">< Back to homepage</a></p>
 
-
         </section>
 
 
@@ -54,8 +53,8 @@
 
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js-min/scripts.js"></script>
 
 </body>
 
