--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             <p>I am based in <strong>Parnell, Auckland</strong> and am available as your celebrant for services in Auckland City and environs.</p>
             <p>Please email me and I will respond with availability and cost.  I would love to meet with you and have some fun planning your special day!</p>
 
+            <figure class="img-centered">    
+                <img class="canz" width="119" src="images/celebrants-association-new-zealand.png" alt="Celebrants Association of New Zealand Inc">
+            </figure>
+
             <hr>
 
             <h1 id="about">About Me</h1>
