update About info

--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 
             <p>Being raised a Catholic, I know all about pomp and ceremony!</p>
             <p>I have excellent written and verbal skills and hold a Certificate in Freelance Journalism from the New Zealand Institute of Business Studies.</p>
-            <p>I am presently in the process of completing my Certificate in Celebrant Studies at The Celebrant School.  This training ensures you are in good hands.</p>
+            <!-- <p>I am presently in the process of completing my Certificate in Celebrant Studies at The Celebrant School.  This training ensures you are in good hands.</p> -->
+            <p>Last year I completed my Certificate in Celebrant Studies. This training ensures you are in good hands.</p>
+            <p>I am also a member of Celebrant Society of New Zealand – you can check <a href="https://www.celebrantsassociation.co.nz/author/betholoughlin/">my listing</a> on their website.</p>
+            
             <p>My hobbies are keeping fit (I’m a gym junkie), reading, current affairs (and a newspaper junkie!) and politics.</p>
 
         </section>
