Add FB logo to footer

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <hr>
 
-            <h1 id="about">About Me</h1>
+            <h1 id="about"></h1> Me</h1>
 
             <img class="reading-img bordered" src="images/beth-oloughlin-celebrant-reading.jpg" alt="Beth reading at a wedding">
 
@@ -165,13 +165,13 @@
         <div class="hero-bottom"></div>
 
         <footer class="footer">
-            <p><small> &copy; Beth O'Loughlin Marriage Celebrant 2017 | mob: <a href="tel:+64272612695">027 261 2695</a> </small></p>
+            <p><small> &copy; Beth O'Loughlin Marriage Celebrant 2017 <span class="mob"><span class="footer-divider">|</span> mob: <a href="tel:+64272612695">027 261 2695</a> </small><a target="_blank" href="https://www.facebook.com/celebrantbeth/" class="fb-link"><img width="25" src="images/facebook.svg" alt="Beth O'Loughlin Marriage Celebrant Facebook"></a></p></span></p>
         </footer>
 
     </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="js-min/scripts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js-min/scripts.js"></script>
 
 </body>
 
