--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <input type="hidden" name="*honeypot" />
                     <input type="hidden" name="*subject" value="Marriage Celebrant Enquiry" />
                     <input type="hidden" name="*default_email" value="beth.o@xtra.co.nz" />
-                    <input type="hidden" name="*redirect" value="https://jaredol.github.io/aucklandcelebrant/thank-you.html" />
+                    <input type="hidden" name="*redirect" value="https://www.celebrantauckland.co.nz/thank-you.html" />
 
                     <div class="form_row">
                         <button class="btn" type="submit">Send</button>
