--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <p>If you would like to make a booking or need further information, feel free to phone me on <a href="tel:+64272612695">027
                         261 2695</a> or, if you prefer email please use the form below.</p>
 
-                <form  data-netlify="true" action="https://www.celebrantauckland.co.nz/thank-you.html" method="POST" id="contact-form" name="Contact" netlify-honeypot="honey">
+                <form  data-netlify="true" action="/thank-you.html" method="POST" id="contact-form" name="Contact" netlify-honeypot="honey">
                     <div class="form_row">
                         <label for="Name">Name<span class="required">*</span></label>
                         <input type="text" id="Name" name="Name" required>
