Minor copy updates

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 special day.</p>
             <img class="profile_pic bordered" src="images/auckland-marriage-celebrant.jpg" alt="Beth O'Loughlin - Auckland Marriage Celebrant">
             <p><span class="drop-cap"><span class="drop-cap__inner">I</span></span> look forward to hearing your story and
-                then assisting in crafting a special service especially for you. I have an event management background which
-                can assist in ensuring your day goes smoothly. If required, I can help you with any aspect of your planning.</p>
+                then assisting in crafting a ceremoney especially for you. I have an event management background which
+                will ensure your day goes smoothly. If required, I can help you with any aspect of your planning.</p>
             <p>I am based in <strong>Parnell, Auckland</strong> and am available as your celebrant for services in Auckland
                 City and environs.</p>
             <p>Please email me and I will respond with availability and cost. I would love to meet with you and have some
@@ -76,9 +76,9 @@
             <img class="reading-img bordered" src="images/beth-oloughlin-celebrant-reading.jpg" alt="Beth reading at a wedding">
 
             <p>Being appointed a marriage celebrant has fulfilled a life-long dream for me.</p>
-            <p>I moved to Auckland 15 years ago and fell in love with Parnell where I still live and am heavily involved
+            <p>I moved to Auckland 20 years ago and fell in love with Parnell where I still live and am heavily involved
                 in the community.</p>
-            <p>I work as an office manager for a busy professional practice in Newmarket. I hail from the South Island where
+            <p>Until a year ago, I worked as an office manager for a busy professional practice in Newmarket. I hail from the South Island where
                 I had my own events management business so know all about organising events!</p>
 
             <p>I am from a large (and yes we were Catholic) family, am a mother of two adult children so appreciate the value
